@@ -63,7 +63,7 @@ public abstract class BaseCharFilter extends CharFilter {
     }
 
     public String toString(){
-      StringBuffer sb = new StringBuffer();
+      StringBuilder sb = new StringBuilder();
       sb.append('(');
       sb.append(pos);
       sb.append(',');
